@startuml

class Company{
}

class Client{
Name
Citizen Card Number
National Healthcare Service Number
Birth date
Sex
Tax Identification Number
Phone
E-mail
}

class ClinicalAnalysisLab{
Name
Address
ID
Tin
Phone Number
Test Types
}

class Test{
Test code
Nhs Number
Client Tin
Test Type
Categories
Parameters
State
Date
Result
}
class TestType{
testID
description
collectingMethod
Parameter Categories
}
class Parameter{
name
code
description
ParameterCategory
}

class ParameterCategory{
code
name
}




Company "1" -- "*" Test : has
Company "1"--"*" Client : has
Company "1"---"*" ClinicalAnalysisLab : has
Test "1"---"*" TestType: has
Test "1"---"*" Parameter: has a list of
Test "1"---"*" ParameterCategory: has a list of
Parameter "1"---"*" ParameterCategory: has



@enduml